fixed script path

--- a/index.html
+++ b/index.html
@@ -23,6 +23,6 @@
     <h2>Last Out</h2>
     <span id="lastOut"></span>
 
-    <script src="js/main.js"></script>
+    <script src="main.js"></script>
 </body>
 </html>
